<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login">


    <TextView
        android:id="@+id/login_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/email_user"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_desc_text" />

    <Button
        android:id="@+id/login_logged_button"
        android:layout_width="122dp"
        android:layout_height="61dp"
        android:layout_marginBottom="304dp"
        android:backgroundTint="@color/cardview_light_background"
        android:hint="@string/login"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:hint="@string/register_info_text"
        android:textSize="17sp"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logged_button" />

    <TextView
        android:id="@+id/login_goto_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="248dp"
        android:textSize="17sp"
        android:hint="@string/register"
        android:textStyle="bold"
        android:textColorHint="#00FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/login_account_text" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/password_user"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_input" />


</androidx.constraintlayout.widget.ConstraintLayout>